crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__permission_prompt.snap
---
source: crates/thndrs/src/cli/renderer/live.rs
expression: frame.render_styled()
---
│     permission  Write src/main.rs                                                 # [bg=#212337]=   [bg=#212337]=   [fg=#f7c67f bg=#212337 b]=permission [fg=#abb4da bg=#212337]=  Write src/main.rs [bg=#212337]=                                              [bg=#212337]=  
│       Allow once  allow once                                                      # [bg=#212337]=   [bg=#212337]=   [fg=#abb4da bg=#212337]=  [bg=#212337]=  [fg=#ebfafa bg=#212337]=Allow once [fg=#abb4da bg=#212337]=  allow once [bg=#212337]=                                                   [bg=#212337]=  
│     › Reject  reject once                                                         # [bg=#212337]=   [bg=#212337]=   [fg=#ebfafa bg=#212337 b]=› [bg=#212337]=  [fg=#ebfafa bg=#212337 b]=Reject [fg=#abb4da bg=#212337]=  reject once [bg=#212337]=                                                      [bg=#212337]=
