crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__prompt_cjk.snap
---
source: crates/thndrs/src/cli/renderer/live.rs
expression: combined
---
width=80:
│     ›  日本語テキスト                                                             # [bg=#212337]=   [bg=#212337]=   [fg=#f1fc79 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=日本語テキスト [bg=#212337]=                                                          [bg=#212337]=  
width=40:
│     ›  日本語テキスト                     # [bg=#212337]=   [bg=#212337]=   [fg=#f1fc79 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=日本語テキスト [bg=#212337]=                  [bg=#212337]=
