crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__prompt_combining_marks.snap
---
source: src/cli/renderer/live.rs
expression: combined
---
width=80:
│     ›  ab̧cd                                                                       # [bg=#212337]=   [bg=#212337]=   [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=ab̧cd [bg=#212337]=                                                                    [bg=#212337]=  
width=40:
│     ›  ab̧cd                               # [bg=#212337]=   [bg=#212337]=   [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=ab̧cd [bg=#212337]=                            [bg=#212337]=
