crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__prompt_long_word.snap
---
source: src/cli/renderer/live.rs
expression: combined
---
width=80:
│     ›  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#212337]=   [bg=#212337]=   [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#212337]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                          # [bg=#212337]=   [bg=#212337]=      [fg=#ebfafa bg=#212337]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#212337]=                       [bg=#212337]=  
width=40:
│     ›  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#212337]=   [bg=#212337]=   [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#212337]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#212337]=   [bg=#212337]=      [fg=#ebfafa bg=#212337]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#212337]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#212337]=   [bg=#212337]=      [fg=#ebfafa bg=#212337]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#212337]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaa        # [bg=#212337]=   [bg=#212337]=      [fg=#ebfafa bg=#212337]=aaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#212337]=     [bg=#212337]=
